--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="dist/main.css">
   <title>TEDxOAU</title>
 </head>
-<body>
+<body class="body">
   <!-- Background Pattern -->
   <div class="bg-pattern">
     <div class="bg-pattern__span"></div>
@@ -36,6 +36,23 @@
     <div class="bg-pattern__span"></div>
     <div class="bg-pattern__span"></div>
     <div class="bg-pattern__span"></div>
+    <div class="bg-pattern__span"></div>
+    <div class="bg-pattern__span"></div>
+    
   </div>
+
+
+  <main class="hero-box">
+    <h1>
+      <span class="heading-main">Welcome <br> to</span>
+      <span class="heading-main--red" id="word">TEDxOAU</span>  
+    </h1>
+  </main>
 </body>
+
+<!-- This is the javascript code for the TEDxOAU animation on the home page-->
+<script src="vendor/js/h1_animation.js"></script>
+
+
 </html>
+
