--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="dist/main.css">
   <title>TEDxOAU</title>
 </head>
-<body class="body">
+<body>
   <!-- Background Pattern -->
   <div class="bg-pattern">
     <div class="bg-pattern__span"></div>
@@ -38,15 +38,22 @@
     <div class="bg-pattern__span"></div>
     <div class="bg-pattern__span"></div>
     <div class="bg-pattern__span"></div>
-    
   </div>
 
 
-  <main class="hero-box">
-    <h1>
-      <span class="heading-main">Welcome <br> to</span>
-      <span class="heading-main--red" id="word">TEDxOAU</span>  
-    </h1>
+  <main class="hero"> 
+    <div class="hero-text">
+      <h1>
+        <span class="heading-main">Welcome <br> to</span>
+        <span class="heading-main--red" id="word">TEDxOAU</span>  
+      </h1>
+      <div class="bg-text"> TEDx <br> OAU</div>
+      <h2 class="text__main">In the spirit of ideas worth spreading, TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. At a TEDx event, TED Talks video and live speakers combine to spark deep discussion and connection. in summary we’re TEDX by the greatest, for the greatest</h2>
+
+      <h2 class="text__sub"> <strong>We are...</strong> <br> Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32</h2>
+
+      <h2 class="text__red">this site and all it’s components in pay homage to helvetica and swiss typography design</h2>
+    </div>
   </main>
 </body>
 
