--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- ================BOX ICONS===================== -->
+  <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="dist/main.css">
   <title>TEDxOAU</title>
+  <link rel="icon" type="image/x-icon" href="resource/tedx_favicon.png">
 </head>
 <body>
   <!-- Background Pattern -->
@@ -39,25 +42,94 @@
     <div class="bg-pattern__span"></div>
     <div class="bg-pattern__span"></div>
   </div>
-
+  <!--  End Background Pattern -->
 
   <main class="hero"> 
-    <header class="hero-text">
+    <nav class="nav">
+      <ul>
+        <li class="nav__list"><a href="#">events</a></li>
+        <li class="nav__list"><a href="#">partners</a></li>
+        <li class="nav__list"><a href="#">blog</a></li>
+        <li class="nav__list"><a href="team.html">the team</a></li>
+        <li class="nav__list"><a href="#">about</a></li>
+      </ul>
+    </nav>
+    <header class="hero__div">
       <h1>
         <span class="heading-main">Welcome <br> to</span>
-        <span class="heading-main--red" id="word">TEDxOAU</span>  
+        <span class="heading-main heading-main--red" id="word">TEDxOAU</span>  
       </h1>
       <div class="bg-text"> TEDx <br> OAU</div>
-      <h2 class="text__main">In the spirit of ideas worth spreading, TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. At a TEDx event, TED Talks video and live speakers combine to spark deep discussion and connection. in summary we’re TEDX by the greatest, for the greatest</h2>
-      <h2 class="text__sub"> <strong>We are...</strong> <br> Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32</h2>
-      <h2 class="text__red">this site and all it’s components in pay homage to helvetica and swiss typography design</h2>
+      <h2 class="hero__text hero__text--main">In the spirit of ideas worth spreading, TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. At a TEDx event, TED Talks video and live speakers combine to spark deep discussion and connection. in summary we’re TEDX by the greatest, for the greatest</h2>
+      <h2 class="hero__text hero__text--sub"> <strong>We are...</strong> <br> Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32</h2>
+      <h2 class="hero__text hero__text--font">this site and all it’s components in pay homage to helvetica and swiss typography design</h2>
       <embed src="resource/scroll-animation.gif" class="text__scroll">
     </header>
 
     <section class="event">
-
     </section>
-
+    
+    <footer class="footer">
+      <div class="footer__container">
+        <div class="footer__container--upper">
+          <div class="footer__container--upper_left">
+            <h2>Why Attend?</h2>
+          </div>
+          <div class="footer__container--upper_right">
+            <div class="upper_right-item">
+              <h3>Meet</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus fuga doloremque minus sapiente laudantium, nisi corrupti ducimus aspernatur iste fugiat minima cumque est animi illo sit atque expedita? Nihil aut aspernatur, ipsa accusantium ipsum quibusdam eius impedit vel laboriosam maxime saepe! Sit qui magni unde corporis dolor incidunt natus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt veritatis repellendus dolores voluptates rerum expedita consequatur aliquid, eum, accusamus repudiandae fuga labore molestias molestiae eaque vel doloribus hic natus error! Aut debitis sint, nobis illum excepturi ullam amet saepe, temporibus nihil error accusantium delectus animi a eum tempora, fugiat totam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, consectetur vel at quaerat beatae alias, fugit quisquam, accusantium obcaecati cum inventore. Dolorem, repudiandae iure quibusdam reiciendis, officiis quidem ullam temporibus laboriosam aspernatur voluptatum alias soluta cupiditate praesentium magnam non eligendi! Accusamus harum suscipit dignissimos dolor quis maxime illo eum qui.</p>
+            </div>
+            <div class="upper_right-item">
+              <h3>Greet</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus fuga doloremque minus sapiente laudantium, nisi corrupti ducimus aspernatur iste fugiat minima cumque est animi illo sit atque expedita? Nihil aut aspernatur, ipsa accusantium ipsum quibusdam eius impedit vel laboriosam maxime saepe! Sit qui magni unde corporis dolor incidunt natus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ducimus ex voluptatibus alias, labore odio tempore quasi quos error hic repellendus debitis quod laboriosam laudantium rerum sequi incidunt quas ad soluta molestiae sint illum voluptatum! Quidem, quis. Explicabo doloremque iusto facere magnam natus vel fugiat! Recusandae consectetur et perferendis aliquam! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora adipisci mollitia quibusdam laborum. Doloremque, fuga in porro, eaque libero dolores quisquam architecto laborum nihil odio sed unde ea officiis maiores voluptates earum voluptatem. Deserunt modi placeat nihil aut cumque at? Cum nesciunt amet ab quibusdam cumque mollitia hic esse similique!</p>
+            </div>
+            <div class="upper_right-item">
+              <h3>Talk</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus fuga doloremque minus sapiente laudantium, nisi corrupti ducimus aspernatur iste fugiat minima cumque est animi illo sit atque expedita? Nihil aut aspernatur, ipsa accusantium ipsum quibusdam eius impedit vel laboriosam maxime saepe! Sit qui magni unde corporis dolor incidunt natus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, tempora omnis. Quisquam quidem dolorem ipsam, repellendus ratione saepe cumque harum nesciunt ab aspernatur reprehenderit quae adipisci iusto dicta nam amet enim aperiam cupiditate vitae? Nulla accusantium labore eligendi excepturi. Labore deleniti dolorum illo neque quod laudantium dignissimos vero, magnam officiis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt minus maiores sint autem natus, suscipit repudiandae laboriosam necessitatibus dolore mollitia magni blanditiis quo id nesciunt in a consequuntur sed illum veritatis quas sequi veniam. Dolore, dolores aliquam. Recusandae, esse! Repudiandae aliquam repellendus aperiam sit eos deleniti vel facilis harum unde.</p>
+            </div>
+          </div>
+        </div>
+        <div class="footer__container--lower">
+          <div class="footer__container--lower_mail">
+              <h2> I don't want your number, i'm social and am in facebo...jokes. Email us</h2>
+              <div class="footer__container--lower_input">
+                  <button class="lower_input-btn">Email</button>
+                  <div class="lower_input-form"><input type="text" placeholder="Your Email"></div>
+                  <div class="lower_input-icon">
+                      <a href="#"><i class="bx bx-right-arrow-alt"></i></a>
+                  </div>
+              </div>
+          </div>
+          <div class="footer__container--lower_links">
+              <div class="footer__list">
+                  <ul>
+                      <li class="footer__list-item"><a href="#">About</a></li>
+                      <li class="footer__list-item"><a href="#">Meet Our Team</a></li>
+                      <li class="footer__list-item"><a href="#">Speaker</a></li>
+                      <li class="footer__list-item"><a href="#">Previous Sessions</a></li>
+                      <li class="footer__list-item"><a href="#">Contact Us</a></li>
+                  </ul>
+                  <ul>
+                      <li class="footer__list-item"><a href="#">FAQs</a></li>
+                      <li class="footer__list-item"><a href="#">Programme Schedule</a></li>
+                      <li class="footer__list-item"><a href="#">Speaker</a></li>
+                      <li class="footer__list-item"><a href="#">Previous Sessions</a></li>
+                      <li class="footer__list-item"><a href="#">Contact Us</a></li>
+                  </ul>
+              </div>
+              <div class="footer__social">
+              <a href="#"><i class="bx bxl-facebook"></i></a>
+              <a href="#"><i class="bx bxl-twitter"></i></a> 
+              <a href="#"><i class="bx bxl-instagram"></i></a>
+              <a href="#"><i class="bx bxl-linkedin"></i></a>
+              <a href="#"><i class="bx bxl-youtube"></i></a>
+              <a href="#"><i class="bx bxl-vimeo"></i></a>
+              </div>  
+          </div>
+      </div>
+      </div>
+    </footer>
     
   </main>
 </body>
