--- a/team.html
+++ b/team.html
@@ -120,7 +120,7 @@
                     <div class="team__body">
                         <div class="team__item" data-name="e">
                             <figure class="team__figure">
-                                <img src="./resource/team_img/Tobi.jpg" class="team__img" alt="Tobiloba Ibraheem">
+                                <img src="./resource/team_img/tobi.jpg" class="team__img" alt="Tobiloba Ibraheem">
                             </figure>
                         </div>
                         <div class="team__details">
