--- a/team.html
+++ b/team.html
@@ -7,7 +7,7 @@
     <!-- ================BOX ICONS===================== -->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="dist/main.css">
-    <title>TEAM PAGE</title>
+    <title>Meet The Team - TEDxOAU</title>
     <link rel="icon" type="image/x-icon" href="resource/tedx_favicon.png">
 </head>
 <body>
