--- a/index.html
+++ b/index.html
@@ -81,13 +81,29 @@
           </div>
         </div>
       </article>
-  </section>
 
-  <section class="update">
-    <a href="#" class="update__box"> <span class="update__text">Community</span> <i class="bx bx-right-arrow-alt"></i></a>
-    <a href="#" class="update__box update__box--white"> <span class="update__text update__text--red">Sponsor</span> </a>
-    <a href="#" class="update__box"> <span class="update__text">Volunteer</span> </a>
-  </section>
+      <article class="blog__wrapper de-active">
+        <h2 class="blog__header">Global topics <br> Local discussions</h2>
+        <div class="blog__body">
+          <div class="blog__des">
+            <p class="blog__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, ducimus iusto totam distinctio ab impedit tempora? Exercitationem debitis vel nobis mollitia quisquam delectus nulla, inventore doloremque aspernatur consequatur! Non facilis maxime, sit officiis sint nostrum est saepe sunt! Error voluptas alias adipisci quibusdam, autem quidem inventore. Quas, similique quibusdam. Ipsam.</p>
+            <a href="#" class="blog__link"><span>See More</span><i class="bx bx-right-arrow-alt"></i></a>              
+          </div>
+          <div class="blog__img">
+            <figure><img src="./resource/sample_blog.png" alt="blog_post" class="blog__img"></figure>
+            <div class="blog__next" id="next"> <p>Next</p></div>       
+          </div>
+        </div>
+      </article>
+    </section>
+
+    
+
+    <section class="update">
+      <a href="#" class="update__box"> <span class="update__text">Community</span> <i class="bx bx-right-arrow-alt"></i></a>
+      <a href="#" class="update__box update__box--white"> <span class="update__text update__text--red">Sponsor</span> </a>
+      <a href="#" class="update__box"> <span class="update__text">Volunteer</span> </a>
+    </section>
     
     <footer class="footer">
       <div class="footer__container">
@@ -155,7 +171,7 @@
 </body>
 
 <!-- This is the javascript code for the TEDxOAU animation on the home page-->
-<script src="vendor/js/h1_animation.js"></script>
+<script src="vendor/js/script.js"></script>
 
 
 </html>
