--- a/team.html
+++ b/team.html
@@ -89,7 +89,7 @@
                         </div>
                         <div class="team__details">
                             <h3 class="team__name">Joy Eze</h3>
-                            <p class="team__role">Volunteer Management Lead</p>
+                            <p class="team__role">Volunteer Recruitment & Management Co-lead</p>
                         </div>
                     </div>
                     <!-- Ayo -->
@@ -161,7 +161,7 @@
                         </div>
                         <div class="team__details">
                             <h3 class="team__name">Tolu Oluwadare</h3>
-                            <p class="team__role">Curation Lead</p>
+                            <p class="team__role">Curations Lead</p>
                         </div>
                     </div>
                     <!-- Ife -->
@@ -184,8 +184,8 @@
                             </figure>
                         </div>
                         <div class="team_details">
-                            <h3 class="team__name">Joy Chinemerem</h3>
-                            <p class="team__role">Volunteer Management Co-lead</p>
+                            <h3 class="team__name">Ajala Joy Chinemerem</h3>
+                            <p class="team__role">Volunteer Recruitment & Management Co-lead</p>
                         </div>
                     </div>
                     <!-- Aanu -->
@@ -421,27 +421,27 @@
                 <div class="footer__container--lower_links">
                     <div class="footer__list">
                         <ul>
-                            <li class="footer__list-item"><a href="#">About</a></li>
-                            <li class="footer__list-item"><a href="#">Meet Our Team</a></li>
-                            <li class="footer__list-item"><a href="#">Speaker</a></li>
-                            <li class="footer__list-item"><a href="#">Previous Sessions</a></li>
+                            <li class="footer__list-item"><a href="about.html">About</a></li>
+                            <li class="footer__list-item"><a href="team.html">Meet Our Team</a></li>
+                            <li class="footer__list-item"><a href="#">Sponsor</a></li>
+                            <li class="footer__list-item"><a href="#">Blog</a></li>
                             <li class="footer__list-item"><a href="#">Contact Us</a></li>
                         </ul>
-                        <ul>
+                        <!--<ul>
                             <li class="footer__list-item"><a href="#">FAQs</a></li>
                             <li class="footer__list-item"><a href="#">Programme Schedule</a></li>
                             <li class="footer__list-item"><a href="#">Speaker</a></li>
                             <li class="footer__list-item"><a href="#">Previous Sessions</a></li>
                             <li class="footer__list-item"><a href="#">Contact Us</a></li>
-                        </ul>
+                        </ul>-->
                     </div>
                     <div class="footer__social">
-                    <a href="#"><i class="bx bxl-facebook"></i></a>
-                    <a href="#"><i class="bx bxl-twitter"></i></a> 
-                    <a href="#"><i class="bx bxl-instagram"></i></a>
-                    <a href="#"><i class="bx bxl-linkedin"></i></a>
-                    <a href="#"><i class="bx bxl-youtube"></i></a>
-                    <a href="#"><i class="bx bxl-vimeo"></i></a>
+                        <a href="https://web.facebook.com/tedxoauofficial/" target="_blank"><i class="bx bxl-facebook"></i></a>
+                        <a href="https://twitter.com/tedxoauofficial?t=2DYvKyfYjTuPeP8kJAMtdw&s=09"><i class="bx bxl-twitter" target="_blank"></i></a> 
+                        <a href="https://www.instagram.com/accounts/login/?next=/tedxoauofficial/"><i class="bx bxl-instagram" target="_blank"></i></a>
+                        <a href="https://www.linkedin.com/company/tedxoauofficial/"><i class="bx bxl-linkedin" target="_blank"></i></a>
+                        <!--<a href="#"><i class="bx bxl-youtube"></i></a>
+                        <a href="#"><i class="bx bxl-vimeo"></i></a>-->
                     </div>  
                 </div>
             </div>
@@ -449,6 +449,6 @@
     </main>
 
     <!--========== PREVIEW JS ==========-->
-    <script src="vendor/js/popup.js"></script>
+    <script src="vendor/js/script.js"></script>
 </body>
 </html>
