--- a/index.html
+++ b/index.html
@@ -96,15 +96,11 @@
         </div>
       </article>
     </section>
-
-    
-
     <section class="update">
       <a href="#" class="update__box"> <span class="update__text">Community</span> <i class="bx bx-right-arrow-alt"></i></a>
       <a href="#" class="update__box update__box--white"> <span class="update__text update__text--red">Sponsor</span> </a>
       <a href="#" class="update__box"> <span class="update__text">Volunteer</span> </a>
-    </section>
-    
+    </section>s
     <footer class="footer">
       <div class="footer__container">
         <div class="footer__container--upper">
