--- a/index.html
+++ b/index.html
@@ -69,38 +69,63 @@
     <section class="blog" id="blog">
       <img src="resource/tedx_oau.png" alt="TEDxOAU" class="blog__head">
       <article class="blog__wrapper">
-        <h2 class="blog__header">Global topics <br> Local discussions</h2>
+        <h2 class="blog__header">Is Volunteering <br>Worth It?? </h2>
         <div class="blog__body">
           <div class="blog__des">
             <p class="blog__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, ducimus iusto totam distinctio ab impedit tempora? Exercitationem debitis vel nobis mollitia quisquam delectus nulla, inventore doloremque aspernatur consequatur! Non facilis maxime, sit officiis sint nostrum est saepe sunt! Error voluptas alias adipisci quibusdam, autem quidem inventore. Quas, similique quibusdam. Ipsam.</p>
-            <a href="#" class="blog__link"><span>See More</span><i class="bx bx-right-arrow-alt"></i></a>              
+            <a href="https://tedxoau.com/blog/" class="blog__link"><span>See More</span><i class="bx bx-right-arrow-alt"></i></a>              
           </div>
           <div class="blog__img">
-            <figure><img src="./resource/sample_blog.png" alt="blog_post" class="blog__img"></figure>
-            <div class="blog__next" id="next"> <p>Next</p></div>       
+            <figure><img src="./resource/sample_blog.png" alt="blog_post" class="blog__img"></figure>       
+          </div>
+        </div>
+      </article>
+
+      <article class="blog__wrapper de-active th">
+        <h2 class="blog__header">TED, TEDx, and TEDxOAU</h2>
+        <div class="blog__body">
+          <div class="blog__des">
+            <p class="blog__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, ducimus iusto totam distinctio ab impedit tempora? Exercitationem debitis vel nobis mollitia quisquam delectus nulla, inventore doloremque aspernatur consequatur! Non facilis maxime, sit officiis sint nostrum est saepe sunt! Error voluptas alias adipisci quibusdam, autem quidem inventore. Quas, similique quibusdam. Ipsam.</p>
+            <a href="https://tedxoau.com/blog/" class="blog__link"><span>See More</span><i class="bx bx-right-arrow-alt"></i></a>              
+          </div>
+          <div class="blog__img">
+            <figure><img src="./resource/team_image.jpeg" alt="blog_post" class="blog__img"></figure>       
           </div>
         </div>
       </article>
 
       <article class="blog__wrapper de-active">
-        <h2 class="blog__header">Global topics <br> Local discussions</h2>
+        <h2 class="blog__header">Hurray! Our Volunteers <br> are now On-board.</h2>
         <div class="blog__body">
           <div class="blog__des">
             <p class="blog__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, ducimus iusto totam distinctio ab impedit tempora? Exercitationem debitis vel nobis mollitia quisquam delectus nulla, inventore doloremque aspernatur consequatur! Non facilis maxime, sit officiis sint nostrum est saepe sunt! Error voluptas alias adipisci quibusdam, autem quidem inventore. Quas, similique quibusdam. Ipsam.</p>
-            <a href="#" class="blog__link"><span>See More</span><i class="bx bx-right-arrow-alt"></i></a>              
+            <a href="https://tedxoau.com/blog/" class="blog__link"><span>See More</span><i class="bx bx-right-arrow-alt"></i></a>              
           </div>
           <div class="blog__img">
-            <figure><img src="./resource/sample_blog.png" alt="blog_post" class="blog__img"></figure>
-            <div class="blog__next" id="next"> <p>Next</p></div>       
+            <figure><img src="./resource/sample_blog.png" alt="blog_post" class="blog__img"></figure>      
           </div>
         </div>
       </article>
+
+      <article class="blog__wrapper de-active ty">
+        <h2 class="blog__header">Our top 10 TEDx talks.</h2>
+        <div class="blog__body">
+          <div class="blog__des">
+            <p class="blog__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, ducimus iusto totam distinctio ab impedit tempora? Exercitationem debitis vel nobis mollitia quisquam delectus nulla, inventore doloremque aspernatur consequatur! Non facilis maxime, sit officiis sint nostrum est saepe sunt! Error voluptas alias adipisci quibusdam, autem quidem inventore. Quas, similique quibusdam. Ipsam.</p>
+            <a href="https://tedxoau.com/blog/" class="blog__link"><span>See More</span><i class="bx bx-right-arrow-alt"></i></a>              
+          </div>
+          <div class="blog__img">
+            <figure><img src="./resource/sample_blog.png" alt="blog_post" class="blog__img"></figure>      
+          </div>
+        </div>
+      </article>
+      <div class="blog__next" id="next"> <p>Next</p></div> 
     </section>
     <section class="update">
       <a href="#" class="update__box"> <span class="update__text">Community</span> <i class="bx bx-right-arrow-alt"></i></a>
       <a href="#" class="update__box update__box--white"> <span class="update__text update__text--red">Sponsor</span> </a>
       <a href="#" class="update__box"> <span class="update__text">Volunteer</span> </a>
-    </section>s
+    </section>
     <footer class="footer">
       <div class="footer__container">
         <div class="footer__container--upper">
