--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body class="bg-pattern">
   <div class="bg-text-container container">
-       <div class="bg-text">TEDx<br>OAU</div>
+    <div class="bg-text">TEDx<br>OAU</div>
   </div>
   <!-- ================HEADER============ -->
     <header class="header scroll-header" id="header">
@@ -169,7 +169,7 @@
       <!-- ================Communities Section============ -->
       <section class="updates-section section">
         <div class="updates container">
-          <a href="#" class="updates__box"> <span class="updates__text">Community</span> <i class="bx bx-right-arrow-alt"></i></a>
+          <a href="#" class="updates__box"> <span class="updates__text">Community</span></a>
           <a href="#" class="updates__box updates__box--white"> <span class="updates__text updates__text--red">Sponsor</span> </a>
           <a href="#" class="updates__box"> <span class="updates__text">Volunteer</span> </a>
         </div>
