Team Page and About page Responsiveness

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
    
     <main class="main"> 
        <!-- ================Home Section============ -->
-      <section class="home section" id="home">
+      <section class="home" id="home">
         <div class="home__container container">
         <div class="good-look">
 
@@ -247,8 +247,8 @@
               <a href="https://twitter.com/tedxoauofficial?t=2DYvKyfYjTuPeP8kJAMtdw&s=09"><i class="bx bxl-twitter" target="_blank"></i></a> 
               <a href="https://www.instagram.com/accounts/login/?next=/tedxoauofficial/"><i class="bx bxl-instagram" target="_blank"></i></a>
               <a href="https://www.linkedin.com/company/tedxoauofficial/"><i class="bx bxl-linkedin" target="_blank"></i></a>
-              <a href="#"><i class="bx bxl-youtube"></i></a>
-              <a href="#"><i class="bx bxl-vimeo"></i></a>
+              <!-- <a href="#"><i class="bx bxl-youtube"></i></a>
+              <a href="#"><i class="bx bxl-vimeo"></i></a> -->
               </div>  
 
           </div>
