--- a/about.html
+++ b/about.html
@@ -1,31 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- ================BOX ICONS===================== -->
-  <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-  <link rel="stylesheet" href="dist/main.css">
-  <title>About - TEDxOAU</title>
-  <link rel="icon" type="image/x-icon" href="resource/tedx_favicon.png">
-</head>
-<body class="about">
-  <header class="about__header"> </header>
-  <h2 class="about__heading">About</h2>
-  <p class="about__text">
-TED<br> <br>
-TED is a nonprofit organization devoted to Ideas Worth Spreading. Started as a four-day conference in California 30 years ago, TED has grown to support its mission with multiple initiatives. The two annual TED Conferences invite the world’s leading thinkers and doers to speak for 18 minutes or less. Many of these talks are then made available, free, at TED.com. TED speakers have included Bill Gates, Jane Goodall, Elizabeth Gilbert, Sir Richard Branson, Nandan Nilekani, Philippe Starck, Ngozi Okonjo-Iweala, Sal Khan and Daniel Kahneman. The annual TED Conference takes place each spring in Vancouver, British Columbia. TED’s media initiatives include TED.com, where new TED Talks are posted daily; TED Translators, which provides subtitles and interactive transcripts as well as translations from volunteers worldwide; the educational initiative TED-Ed. TED has established The Audacious Project that takes a collaborative approach to funding ideas with the potential to create change at thrilling scale; TEDx, which supports individuals or groups in hosting local, self- organized TED-style events around the world, and the TED Fellows program, helping world-changing innovators from around the globe to amplify the impact of their remarkable projects and activities. Follow TED on Twitter http://twitter.com/TEDTalks or on Facebook at http://www.facebook.com/TED <br> <br>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- ================BOX ICONS===================== -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="dist/main.css" />
+    <title>About - TEDxOAU</title>
+    <link rel="icon" type="image/x-icon" href="resource/tedx_favicon.png" />
+  </head>
+  <body class="about-body">
+    <header class="about__header">
+      <nav class="nav__mini">
+        <a href="#"><i class="bx bx-right-arrow-alt"></i></a>
+      </nav>
+    </header>
+    <h2 class="about__header-title">About</h2>
+    <!-- <p class="about__text">
+      TED<br />
+      <br />
+      TED is a nonprofit organization devoted to Ideas Worth Spreading. Started
+      as a four-day conference in California 30 years ago, TED has grown to
+      support its mission with multiple initiatives. The two annual TED
+      Conferences invite the world’s leading thinkers and doers to speak for 18
+      minutes or less. Many of these talks are then made available, free, at
+      TED.com. TED speakers have included Bill Gates, Jane Goodall, Elizabeth
+      Gilbert, Sir Richard Branson, Nandan Nilekani, Philippe Starck, Ngozi
+      Okonjo-Iweala, Sal Khan and Daniel Kahneman. The annual TED Conference
+      takes place each spring in Vancouver, British Columbia. TED’s media
+      initiatives include TED.com, where new TED Talks are posted daily; TED
+      Translators, which provides subtitles and interactive transcripts as well
+      as translations from volunteers worldwide; the educational initiative
+      TED-Ed. TED has established The Audacious Project that takes a
+      collaborative approach to funding ideas with the potential to create
+      change at thrilling scale; TEDx, which supports individuals or groups in
+      hosting local, self- organized TED-style events around the world, and the
+      TED Fellows program, helping world-changing innovators from around the
+      globe to amplify the impact of their remarkable projects and activities.
+      Follow TED on Twitter http://twitter.com/TEDTalks or on Facebook at
+      http://www.facebook.com/TED <br />
+      <br />
 
-TEDx<br> <br>
-In the spirit of ideas worth spreading, TED has created a program called TEDx. TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. Our event is called TEDxOAU, where x = independently organized TED event. At our TEDxOAU event, TED Talks video and live speakers will combine to spark deep discussion and connection in a small group. The TED Conference provides general guidance for the TEDx program, but individual TEDx events, including ours, are self-organized.<br> <br>
+      TEDx<br />
+      <br />
+      In the spirit of ideas worth spreading, TED has created a program called
+      TEDx. TEDx is a program of local, self-organized events that bring people
+      together to share a TED-like experience. Our event is called TEDxOAU,
+      where x = independently organized TED event. At our TEDxOAU event, TED
+      Talks video and live speakers will combine to spark deep discussion and
+      connection in a small group. The TED Conference provides general guidance
+      for the TEDx program, but individual TEDx events, including ours, are
+      self-organized.<br />
+      <br />
 
-TEDxOAU <br> <br>
-TEDxOAU is an independently organized TED event under an authorized license from TED at Obafemi Awolowo University, Ile-Ife. It is an initiative that aims to bring together a socially conscious community in OAU and make the youths involved in the spectrum of IDEAS WORTH SPREADING. Holding for the second time after a four-year hiatus break, TEDxOAU targets an audience of students, young professionals and academic members of staff. The conference hopes to shine the spotlight on interdisciplinary speakers — including those from the local community — who will ignite action, and encourage innovation, and critical discussion.
+      TEDxOAU <br />
+      <br />
+      TEDxOAU is an independently organized TED event under an authorized
+      license from TED at Obafemi Awolowo University, Ile-Ife. It is an
+      initiative that aims to bring together a socially conscious community in
+      OAU and make the youths involved in the spectrum of IDEAS WORTH SPREADING.
+      Holding for the second time after a four-year hiatus break, TEDxOAU
+      targets an audience of students, young professionals and academic members
+      of staff. The conference hopes to shine the spotlight on interdisciplinary
+      speakers — including those from the local community — who will ignite
+      action, and encourage innovation, and critical discussion. About the Team
+      (Completed)
+    </p> -->
 
-About the Team (Completed)
-  </p>
+    <main class="main">
+      <section class="about section">
+        <div class="about__container container">
+          <div class="about__container--description">
+            <h2 class="about__container--description_title">TEDxOAU</h2>
 
+            <p class="about__container--description_summary">
+              TEDxOAU is an independently organized TED event under an
+              authorized license from TED at Obafemi Awolowo University,
+              Ile-Ife. It is an initiative that aims to bring together a
+              socially conscious community in OAU and make the youths involved
+              in the spectrum of IDEAS WORTH SPREADING. Holding for the second
+              time after a four-year hiatus break, TEDxOAU targets an audience
+              of students, young professionals and academic members of staff.
+              The conference hopes to shine the spotlight on interdisciplinary
+              speakers — including those from the local community — who will
+              ignite action, and encourage innovation, and critical discussion.
+            </p>
+          </div>
 
-</body>
+          <div class="about__container--description">
+            <h2 class="about__container--description_title">TED</h2>
+
+            <p class="about__container--description_summary">
+              TED is a nonprofit organization devoted to Ideas Worth Spreading.
+              Started as a four-day conference in California 30 years ago, TED
+              has grown to support its mission with multiple initiatives. The
+              two annual TED Conferences invite the world’s leading thinkers and
+              doers to speak for 18 minutes or less. Many of these talks are
+              then made available, free, at TED.com. TED speakers have included
+              Bill Gates, Jane Goodall, Elizabeth Gilbert, Sir Richard Branson,
+              Nandan Nilekani, Philippe Starck, Ngozi Okonjo-Iweala, Sal Khan
+              and Daniel Kahneman. The annual TED Conference takes place each
+              spring in Vancouver, British Columbia. TED’s media initiatives
+              include TED.com, where new TED Talks are posted daily; TED
+              Translators, which provides subtitles and interactive transcripts
+              as well as translations from volunteers worldwide; the educational
+              initiative TED-Ed. TED has established The Audacious Project that
+              takes a collaborative approach to funding ideas with the potential
+              to create change at thrilling scale; TEDx, which supports
+              individuals or groups in hosting local, self- organized TED-style
+              events around the world, and the TED Fellows program, helping
+              world-changing innovators from around the globe to amplify the
+              impact of their remarkable projects and activities. Follow TED on
+              <a href="http://twitter.com/TEDTalks"> Twitter</a> or on at
+              <a href="http://www.facebook.com/TED"> Facebook</a>
+            </p>
+          </div>
+
+          <div class="about__container--description">
+            <h2 class="about__container--description_title">TEDxOAU</h2>
+
+            <p class="about__container--description_summary">
+              In the spirit of ideas worth spreading, TED has created a program
+              called TEDx. TEDx is a program of local, self-organized events
+              that bring people together to share a TED-like experience. Our
+              event is called TEDxOAU, where x = independently organized TED
+              event. At our TEDxOAU event, TED Talks video and live speakers
+              will combine to spark deep discussion and connection in a small
+              group. The TED Conference provides general guidance for the TEDx
+              program, but individual TEDx events, including ours, are
+              self-organized.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
