--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   <body class="about-body">
     <header class="about__header">
       <nav class="nav__mini">
-        <a href="#"><i class="bx bx-right-arrow-alt"></i></a>
+        <a href="https://tedxoau.com/blog/"><i class="bx bx-right-arrow-alt"></i></a>
       </nav>
     </header>
     <h2 class="about__header-title">About</h2>
