--- a/team.html
+++ b/team.html
@@ -48,7 +48,7 @@
     <!--  End Background Pattern -->
     <main class="hero">
       <nav class="nav__mini">
-        <a href="#"><i class="bx bx-right-arrow-alt"></i></a>
+        <a href="about.html"><i class="bx bx-right-arrow-alt"></i></a>
       </nav>
 
       <header class="team-header">
