--- a/team.html
+++ b/team.html
@@ -51,7 +51,7 @@
         <a href="about.html"><i class="bx bx-right-arrow-alt"></i></a>
       </nav>
 
-      <header class="team-header">
+      <header class="team-header container">
         <h1>
           <span class="heading-main">The Team</span>
         </h1>
